--- a/style.css
+++ b/style.css
@@ -1,146 +1,170 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
+
 * {
   margin: 0;
   padding: 0;
+  font-family: "Roboto Slab", sans-serif;
 }
 
-body {
-  font-family: "Roboto Slab", serif;
-}
-.first-section {
-  background-color: #1f2937;
-  padding-bottom: 100px;
-}
-
-.header-logo {
-  font-size: 24px;
-  color: #f9faf8;
-}
-
-.header-link li {
-  list-style: none;
-  font-size: 18px;
-  color: #e5e7eb;
-  margin: 10px;
-}
-
-.navbar {
-  display: flex;
-}
-
-ul {
-  display: flex;
-}
-
-.navbar-left,
-.navbar-right {
-  display: flex;
-  width: 50%;
-  justify-content: center;
-  align-items: center;
-}
-
-.content {
-  background-color: #1f2937;
-}
-
-.content-title {
-  font-size: 48px;
-  font-weight: bolder;
-  color: #f9faf8;
-}
-
-.content-caption {
-  font-size: 18px;
-  color: #e5e7eb;
-  margin-left: 95px;
-}
-
-.hero-img {
-  width: auto;
-  height: 300px;
-  margin: 50px;
-  padding-right: 100px;
-}
-
-.content {
-  display: flex;
-  flex-direction: row;
-}
-
-.content-left {
-  display: flex;
-  flex-direction: column;
-  margin: 50px;
-  align-items: center;
-  justify-content: center;
-  padding-left: 145px;
-  padding-top: 40px;
-}
-
-.content-right {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 50%;
-}
-
-.hero-btn {
-  background-color: #3882f6;
-  color: white;
-  width: 100px;
-  margin-right: 242px;
-  margin-top: 10px;
-  padding: 10px;
-  border-radius: 10px;
-  border: 0px;
-  cursor: pointer;
+.main-img {
+  width: 400px;
+  height: auto;
+  padding-right: 70px;
 }
 
 h2 {
-  font-size: 36px;
-  font-weight: bolder;
-  color: #1f2937;
+  font-size: 40px;
+}
+
+h3 {
   text-align: center;
-}
-
-.second-section {
-  background-color: peachpuff;
-  padding-bottom: 60px;
-}
-
-.card-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-
-.card-img {
-  padding: 5px;
-  border-radius: 15px;
-  display: flex;
-  width: 300px;
-  height: auto;
-}
-
-.card-caption {
-  margin-left: 10px;
-  padding-bottom: 50px;
-}
-
-.third-section {
-  background-color: #e5e7eb;
-}
-
-.quote {
-  text-align: center;
-  font-size: 24px;
+  font-size: 30px;
   color: #1f2937;
   padding-top: 30px;
 }
 
-.quote-author {
-  text-align: center;
-  padding-top: 10px;
+p {
+  font-size: 18px;
+  padding-left: 4px;
+}
+
+ul > li {
+  list-style-type: none;
+  padding-left: 30px;
+}
+
+a {
+  all: unset;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
+.hero-sign-up {
+  margin-top: 10px;
+  margin-left: 4px;
+  background-color: #3882f6;
+  border: 0px;
+  border-radius: 5px;
+  color: white;
+  font-size: 15px;
+  padding: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.hero-sign-up:hover {
+  cursor: pointer;
+  background-color: rgb(15, 105, 240);
+}
+
+.header > ul {
+  display: flex;
+  margin: 10px;
+}
+.top-container {
+  background-color: #1f2937;
+  color: #f9faf8;
+  height: 45vh;
+}
+
+.header {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.left-hero > p {
+  color: #e5e7eb;
+}
+
+.hero-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 70px;
+  margin-left: 25px;
+}
+
+.middle-container {
+  padding-bottom: 70px;
+}
+
+.card-container {
+  margin-top: 25px;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+}
+
+.card-img {
+  height: auto;
+  width: 200px;
+  border-radius: 10px;
+}
+
+.bottom-container {
+  background-color: #e5e7eb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.bottom-container > p {
+  font-style: italic;
+  font-size: 23px;
+}
+
+.author {
+  font-weight: bold;
+  padding-top: 20px;
+  padding-left: 400px;
+}
+
+.footer {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-border {
+  background-color: #3882f6;
+  color: #e5e7eb;
+  width: 75%;
+  height: 40%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  padding: 15px;
+}
+
+.footer-border-left > p:nth-child(1) {
+  font-weight: bolder;
+}
+.footer-border-left {
+  width: 80%;
+  margin-left: 100px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.footer-border-right {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.footer-btn {
+  all: unset;
+  border: 1px double white;
+  border-radius: 10px;
+  padding: 5px 20px 5px 20px;
+  margin-right: 50px;
+}
+.footer-btn:hover {
+  cursor: pointer;
 }
